--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-/* @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"); */
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body {
@@ -14,7 +13,14 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #f7f7f7;
+  background-image: radial-gradient(
+    circle at 120.71% 50%,
+    #ff41ff 0,
+    #e540ff 25%,
+    #b53cf2 50%,
+    #8537dd 75%,
+    #5532c9 100%
+  );
 }
 
 .container {
@@ -30,11 +36,13 @@ body {
 .form {
   padding: 25px 30px;
 }
+
 .form header {
   font-size: 25px;
-  font-weight: 600;
+  font-weight: bold;
   padding-bottom: 10px;
   border-bottom: 1px solid #e6e6e6;
+  color: #6715eb;
 }
 .form form {
   margin: 20px 0;
@@ -47,4 +55,60 @@ body {
   text-align: center;
   border-radius: 5px;
   margin-bottom: 10px;
+}
+
+.form form .name-surname {
+  display: flex;
+}
+
+form .name-surname .field:first-child {
+  margin-right: 10px;
+}
+
+form .name-surname .field:last-child {
+  margin-left: 10px;
+}
+
+.form form .field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form form .field label {
+  margin-bottom: 2px;
+  font-size: 19px;
+}
+
+.form form .field input {
+  outline: none;
+}
+
+.form form .input input {
+  height: 40px;
+  width: 100%;
+  font-size: 16px;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form form .image input {
+  font-size: 16px;
+}
+
+.form form .submit input {
+  margin-top: 13px;
+  height: 45px;
+  border: none;
+  font-size: 17px;
+  font-weight: bold;
+  background-color: #7c3ae9;
+  color: #fff;
+  border: 5px;
+  cursor: pointer;
+}
+
+.form .already-sup {
+  text-align: center;
 }
