avances de diseño

--- a/views/login.html
+++ b/views/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse - Torce</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Iniciar sesión - Torce</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
@@ -14,38 +14,25 @@
             <i class="fas fa-comments"></i>
             <header>Torce App</header>
         </section>
-        <section class="form signup">
+        <section class="form login">
             
             <form action="#">
                <!-- <div class="txt_error">Error de mensaje</div>-->
-                <div class="name-surname">
-                    <div class="field input">
-                        <label for="">Nombre:</label>
-                        <input type="text" placeholder="Escribe tu nombre">
-                    </div>
-                    <div class="field input">
-                        <label for="">Apellido:</label>
-                        <input type="text" placeholder="Escribe tu apellido">
-                    </div>
-                </div>
+                
                 <div class="field input">
                     <label for="">Email:</label>
                     <input type="email" placeholder="Digita tu correo electrónico">
                 </div>
                 <div class="field input">
                     <label for="">Contraseña:</label>
-                    <input type="text" placeholder="Digita una contraseña">
+                    <input type="text" placeholder="Digita tu contraseña">
                     <i class="fas fa-eye"></i>
-                </div>
-                <div class="field image">
-                    <label for="">Selecciona una imagen:</label>
-                    <input type="file">
                 </div>
                 <div class="field submit">
                     <input type="submit" value="¡A chatear!">
                 </div>
             </form>
-            <div class="already-sup">¿Ya tienes una cuenta? <a href="views/login.html">Inicia sesión</a></div>
+            <div class="already-sup">¿No tienes cuenta?<a href="../index.html"> Regístrate ahora</a></div>
         </section>
     </div>
     
