--- a/css/style.css
+++ b/css/style.css
@@ -13,35 +13,42 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: radial-gradient(
-    circle at 120.71% 50%,
-    #ff41ff 0,
-    #e540ff 25%,
-    #b53cf2 50%,
-    #8537dd 75%,
-    #5532c9 100%
-  );
+  background: linear-gradient(120deg, #2980b9, #8e44ad);
 }
 
 .container {
+  display: flex;
   background-color: #fff;
-  width: 450px;
+  width: 45%;
   border-radius: 16px;
   box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
     0 32px 64px -48px rgba(0, 0, 0, 0.5);
 }
 
 /* Codigo para formulario de Registro */
-
-.form {
-  padding: 25px 30px;
+.logo {
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  align-items: center;
+  justify-content: center;
 }
 
-.form header {
+.logo {
+  font-size: 50px;
+  color: #8d56e6;
+}
+
+.form {
+  padding: 25px 30px 25px 0px;
+  width: 65%;
+}
+
+.logo header {
+  text-align: center;
   font-size: 25px;
   font-weight: bold;
   padding-bottom: 10px;
-  border-bottom: 1px solid #e6e6e6;
   color: #6715eb;
 }
 .form form {
@@ -71,6 +78,7 @@ form .name-surname .field:last-child {
 
 .form form .field {
   display: flex;
+  position: relative;
   flex-direction: column;
   margin-bottom: 10px;
 }
@@ -94,7 +102,8 @@ form .name-surname .field:last-child {
 }
 
 .form form .image input {
-  font-size: 16px;
+  margin-top: 5px;
+  font-size: 14px;
 }
 
 .form form .submit input {
@@ -109,6 +118,25 @@ form .name-surname .field:last-child {
   cursor: pointer;
 }
 
+.form form .field i {
+  position: absolute;
+  right: 15px;
+  color: #ccc;
+  top: 70%;
+  transform: translateY(-40%);
+  cursor: pointer;
+}
+
 .form .already-sup {
   text-align: center;
+  margin: 10px 0;
+  font-size: 17px;
+}
+
+.form .already-sup a {
+  color: #6715eb;
+}
+
+.form .already-sup a:hover {
+  text-decoration: underline;
 }
