lista de usuarios añadida

--- a/views/users.html
+++ b/views/users.html
@@ -9,15 +9,83 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container usersc">
         <section class="users">
-            <div class="content">
-                <img src="" alt="">
-                <div class="details">
-                    <span>Elías García</span>
+            <header>
+                <div class="content">
+                    <img src="../assets/img/persona2.jpg" alt="">
+                    <div class="details">
+                        <span>Melanie</span>
+                        <p>En línea</p> 
+                    </div>
                 </div>
+                <a href="" class="logout">Cerrar sesión</a>
+            </header>
+            <div class="search">
+                <span class="text">Elige un usuario para chatear</span>
+                <input type="text" placeholder="Digita un nombre para buscar">
+                <button> <i class="fas fa-search"></i></button>
             </div>
-            <a href="" class="logout">Cerrar sesión</a>
+            <div class="users-list">
+                <a href="#">
+                    <div class="content">
+                        <img src="../assets/img/persona3.jpg" alt="">
+                        <div class="details"> 
+                            <span>Elías García</span>
+                            <p>Mensaje de prueba</p>
+                        </div>
+                    </div>
+                    <div class="status-dot">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="content">
+                        <img src="../assets/img/persona3.jpg" alt="">
+                        <div class="details"> 
+                            <span>Elías García</span>
+                            <p>Mensaje de prueba</p>
+                        </div>
+                    </div>
+                    <div class="status-dot">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="content">
+                        <img src="../assets/img/persona3.jpg" alt="">
+                        <div class="details"> 
+                            <span>Elías García</span>
+                            <p>Mensaje de prueba</p>
+                        </div>
+                    </div>
+                    <div class="status-dot">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </a> <a href="#">
+                    <div class="content">
+                        <img src="../assets/img/persona3.jpg" alt="">
+                        <div class="details"> 
+                            <span>Elías García</span>
+                            <p>Mensaje de prueba</p>
+                        </div>
+                    </div>
+                    <div class="status-dot">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </a> <a href="#">
+                    <div class="content">
+                        <img src="../assets/img/persona3.jpg" alt="">
+                        <div class="details"> 
+                            <span>Elías García</span>
+                            <p>Mensaje de prueba</p>
+                        </div>
+                    </div>
+                    <div class="status-dot offline">
+                        <i class="fas fa-circle"></i>
+                    </div>
+                </a>
+            </div>
         </section>
     </div>
     
