--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,133 @@ form .name-surname .field:last-child {
 .form .already-sup a:hover {
   text-decoration: underline;
 }
+
+/* Vista de usuarios */
+
+.users {
+  padding: 25px 30px;
+  width: 100%;
+}
+
+.container.usersc {
+  width: 35%;
+}
+
+.users header,
+.users-list a {
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  justify-content: space-between;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.container img {
+  object-fit: cover;
+  border-radius: 50px;
+}
+
+:is(.users, .users-list) .content {
+  display: flex;
+  align-items: center;
+}
+
+.users header .content img {
+  height: 50px;
+  width: 50px;
+}
+
+:is(.users, .users-list) .details {
+  color: #000;
+  margin-left: 15px;
+}
+
+:is(.users, .users-list) .details span {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+:is(.users, .users-list) .details p {
+  font-size: 15px;
+}
+
+.users header .logout {
+  background-color: #7c3ae9;
+  color: #fff;
+  font-size: 17px;
+  padding: 7px 15px;
+  border-radius: 5px;
+}
+
+.users .search {
+  margin: 20px 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: space-between;
+}
+
+.users .search .text {
+  font-size: 18px;
+}
+
+.users .search input {
+  position: absolute;
+  height: 42px;
+  width: calc(100% - 50px);
+  border: 1px solid #ccc;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.users .search button {
+  width: 47px;
+  height: 42px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background-color: #7c3ae9;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 0 5px 5px 0;
+}
+
+.users-list {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
+.users-list::-webkit-scrollbar {
+  width: 0px;
+}
+
+.users-list a {
+  margin-bottom: 10px;
+  page-break-after: 10px;
+  padding-right: 15px;
+  border-bottom-color: #f1f1f1;
+}
+
+.users-list a .content img {
+  height: 40px;
+  width: 40px;
+}
+
+.users-list a .content p {
+  color: #6767a6;
+}
+
+.users-list a .status-dot {
+  font-size: 12px;
+  color: #468669;
+}
+
+.users-list a .status-dot.offline {
+  font-size: 12px;
+  color: #ccc;
+}
+
+.users-list a:last-child {
+  border: none;
+  margin-bottom: 0px;
+}
